# Parkinson-Diagnosis

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: classification.ipynb  classification_graph.ipynb  connectivity_analysis.ipynb
utils/: __init__.py  correlation.py  data.py  graph.py
