[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Parkinson-Diagnosis"
version = "0.1.0"
description = "Parkinson Diagnosis based on fMRI and ML"
authors = [
    {name = "Théo Bruno Frey Riffel", email = "theobfriffel@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.0",
]

[tool.setuptools]
packages = ["utils"]
